--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md d-flex flex-column">
-                <h2 class="mb-0">Full Stack Web Development Internship</h2>
+                <h2 class="mb-0">Web Development Internship</h2>
                 <small>Main Flow Services and Technologies </small>
 
                 <div>
